...
                ) {
                    // Import Recipe option
                    FabMenuItem(
                        onClick = onImportRecipeClick,
                        icon = Icons.Default.Download,
                        label = stringResource(id = R.string.fab_import_recipe),
                        buttonTestTag = "ImportRecipeFabItem"
                    )

                    // Create Recipe option
                    FabMenuItem(
                        onClick = onCreateRecipeClick,
                        icon = Icons.Default.Create,
...

            // Main FAB
            FloatingActionButton(
                onClick = {
                    onExpandedChange()
                },
                modifier = Modifier.testTag("RecipesFabToggle"),
                containerColor = MaterialTheme.colorScheme.tertiary,
                contentColor = MaterialTheme.colorScheme.onTertiary
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = fabContentDescription,
...
